# signalgraph-aml

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
.streamlit/: config.toml
docs/: DATA_CARD.md  MODEL_CARD.md
docs/benchmarks/: README.md
docs/benchmarks/ibm-hi-small/: BENCHMARK_REPORT.md  benchmark_summary.json  capacity_curve.csv  cluster_profiles.csv
src/signalgraph_aml/: __init__.py  benchmark.py  config.py  data.py  evaluation.py  features.py  modeling.py  pipeline.py  profiling.py
tests/: test_app.py  test_benchmark.py  test_data.py  test_evaluation.py  test_features.py  test_modeling.py
website/: index.html  styles.css
