[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalgraph-aml"
version = "0.1.0"
description = "Explainable unsupervised detection of suspicious banking activity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3,<2",
  "networkx>=3.2,<4",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "plotly>=5.18,<7",
  "scikit-learn>=1.4,<2",
  "streamlit>=1.32,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
signalgraph-aml = "signalgraph_aml.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
